# MoravaEngine

./: .gitignore  .gitmodules  .gitmodules.dtrajko  CMakeLists.txt  MoravaEngine.sln  OpenGLCourseApp.sln  README.md  TODO.txt
MoravaEngine/: AABB.cpp  Application.cpp  Application.h  Attachment.cpp  Attachment.h  Block.cpp  Block.h  BlurEffect.cpp  BlurEffect.h  BulletDebugDrawer.cpp  CMakeLists.txt  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  CameraControllerVoxelTerrain.cpp  CameraControllerVoxelTerrain.h  CommonStructs.h  CommonValues.h  Cube.cpp  Cube.h  CubeNanosuit.cpp  CubeNanosuit.h  CubeSkybox.cpp  CubeSkybox.h  Cubemap.cpp  Cubemap.h  Cylinder.cpp  DirectionalLight.cpp  DirectionalLight.h  EndlessTerrain.cpp  EndlessTerrain.h  EntitySelection.cpp  EntitySelection.h  EnvMapEditorLayer.cpp  EnvMapEditorLayer.h  EnvMapMaterial.cpp  EnvMapMaterial.h  EnvMapRenderPass.cpp  EnvMapRenderPass.h  (+291 more)
MoravaEngine/Hazel/Core/: Assert.h  Base.h  Buffer.h  HazelLog.cpp  HazelWindow.h  Input.h  Layer.cpp  Layer.h  MouseCodes.h  Ref.h  Timestep.h  UUID.h
MoravaEngine/Hazel/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
MoravaEngine/Hazel/ExampleApp/: ExampleApp.csproj
MoravaEngine/Hazel/ImGui/: ImGui.h
MoravaEngine/Hazel/Panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
MoravaEngine/Hazel/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  HazelCamera.cpp  HazelCamera.h  HazelFramebuffer.cpp  HazelFramebuffer.h  HazelMaterial.cpp  HazelMaterial.h  HazelMesh.cpp  HazelMesh.h  HazelRenderer.cpp  HazelRenderer.h  HazelShader.cpp  HazelShader.h  HazelTexture.cpp  HazelTexture.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshAnimPBR.cpp  MeshAnimPBR.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  Pipeline.cpp  Pipeline.h  RenderCommand.h  RenderCommandQueue.cpp  RenderPass.cpp  RenderPass.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  (+9 more)
MoravaEngine/Hazel/Scene/: Components.h  Entity.cpp  Entity.h  HazelScene.cpp  HazelScene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.cpp  ScriptableEntity.h
MoravaEngine/Hazel/Script/: ScriptEngine.cpp  ScriptEngine.h  ScriptEngineRegistry.h  ScriptWrappers.cpp
MoravaEngine/Hazel/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
MoravaEngine/LearnOpenGL/: MeshJoey.cpp  MeshJoey.h  MeshSSAO.cpp  MeshSSAO.h  ModelJoey.cpp  ModelJoey.h  ModelSSAO.cpp  ModelSSAO.h  SphereJoey.h  TextureJoey.cpp  TextureJoey.h
MoravaEngine/Misc/: phong_light_model_shader_variables
MoravaEngine/Models/: Eiffel_Tower.mtl  cottage.mtl  imgui.ini  planet.mtl  ring.blend  wooden_watch_tower.mtl
MoravaEngine/Models/BusterDrone/: busterDrone.gltf
MoravaEngine/Models/Cerberus/: CerberusMaterials.fbx
MoravaEngine/Models/Gladiator/: Gladiator.fbx  imgui.ini
MoravaEngine/Models/Hazel/: Cube1m.fbx  Sphere1m.fbx  TestScene.fbx  TestSceneVulkan.fbx  imgui.ini
MoravaEngine/Models/PardCode/: imgui.ini
MoravaEngine/Models/Primitives/: ring_90.blend
MoravaEngine/Models/Rifle/: uploads_files_1980630_F4r3l_Sci_Fi_Rifle_SM.FBX
MoravaEngine/Models/ShaderBall/: IndentA.tga  README.md  checkerA.tga
MoravaEngine/Models/Stone_Carved/: tf3pfhzda_LOD0.fbx
MoravaEngine/Models/TheSandbox_VoxEdit/: Fox_TheSandbox_VoxEdit.gltf  fox.mtl
MoravaEngine/Models/m1911/: M1911.blend  M1911.blend1  M1911Materials.fbx  imgui.ini  m1911.fbx
MoravaEngine/PerlinNoise/: PerlinNoise.hpp  README.md
MoravaEngine/Projects/HangmanScript/: GameConsole.cs  HangMain.cs  IGame.cs
MoravaEngine/Resources/Shaders/: BloomBlend.glsl  BloomBlur.glsl  Deinterleaving.glsl  EquirectangularToCubeMap.glsl  HBAO.glsl  HBAOBlur.glsl  HBAOBlur2.glsl  HazelPBR_Anim.glsl  JumpFlood_Composite.glsl  JumpFlood_Init.glsl  JumpFlood_Pass.glsl  LightCulling.glsl  Outline_Anim.glsl  PreDepth.glsl  PreDepth_Anim.glsl  PreethamSky.glsl  Reinterleaving.glsl  Renderer2D.glsl  Renderer2D_Circle.glsl  Renderer2D_Line.glsl  Renderer2D_Text.glsl  SceneComposite.glsl  SelectedGeometry.glsl  ShadowMap_Anim.glsl  Skybox.glsl  Texture.glsl  Wireframe.glsl
MoravaEngine/Scenes/: Balls.hsc  Basic.hazel  Bouncy.hazel  Box2D_Test.hazel  Building.hsc  Example.hazel  Example.hsc  Game.hazel  Game.hsc  Mansion.hsc  Physics2DTest.hazel  Physics2DTest.hsc  PinkCube.hazel  PinkCube.hsc  ZombieHouse.hsc  balls.hazel  scene_acropolis.scene  scene_block_materials.scene  scene_gizmo_scale.scene  scene_house.scene  scene_island.scene  scene_old_stove.scene  scene_primitives_5.scene  scene_primitives_6.scene  scene_quixel_megascans.scene  scene_tmp_01.scene  scene_tunnel.scene  scene_volcano_underwater.scene  scene_volcano_underwater_2.scene  zombie_house.hazel
MoravaEngine/Shaders/: HybridAnimPBR.fs  PBR.frag  asteroids.vs  asteroids_planet.vs  basic.fs  cubemap.frag  cubemap.vert  directional_shadow_map.vert  editor_object.fs  editor_object.vs  env_map_post_processing.frag  env_map_post_processing.vert  env_map_post_processing_bloom_blur.frag  env_map_post_processing_bloom_blur.vert  framebuffers_scene.fs  framebuffers_scene.vs  framebuffers_screen.fs  framebuffers_screen.vs  gizmo.fs  gizmo.vs  glass.fs  glass.vs  marching_cubes.fs  marching_cubes.vs  nanosuit.fs  nanosuit.vs  omni_shadow_map.frag  omni_shadow_map.vert  render_instanced.fs  render_instanced.vs  shader.frag  shader.vert  skybox.frag  skybox.vert  skybox_joey.frag  skybox_joey.vert  water.frag  water.vert  waterOriginal.frag  waterOriginal.vert
MoravaEngine/Shaders/HLSL/: BasicPixelShader.hlsl  BasicVertexShader.hlsl  DirLightBumpPS.hlsl  DirLightBumpVS.hlsl  DirLightPixelShader.hlsl  DirLightVertexShader.hlsl  DirectionalLightPixelShader.hlsl  DirectionalLightVertexShader.hlsl  MediumPixelShader.hlsl  MediumVertexShader.hlsl  Triangle.hlsl  (+2 more)
MoravaEngine/SourceConditional/: SceneBullet.cpp  SceneBullet.h
MoravaEngine/Textures/: imgui.ini  semi_transparent.psd
MoravaEngine/src/: config.h  main.cpp  pch.h  resource.h
Sandbox/: CMakeLists.txt
(+1549 files in other folders)
